# generative-ai-learning-lab

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: model_config.yaml  pipeline_config.yaml  rag_config.yaml
deployment/api/: fastapi_app.py
deployment/docker/: Dockerfile
notebooks/: 03_rag_pipeline.ipynb
projects/multi-agent-system/: README.md
projects/rag-document-qa/: README.md
scripts/: build_index.py  evaluate_model.py  ingest_data.py
tests/: test_prompts.py  test_rag.py  test_utils.py
